--- a/style.scss
+++ b/style.scss
@@ -421,7 +421,76 @@
         }
     }
 }
+.repair-examples{
+    display: flex;
+    flex-wrap: wrap; 
+    margin-top: 31px;      
+    
+    .repair-examples__item {
+        position: relative;
+        z-index: 0;
+        margin-right: 30px;
 
+        .item-list {
+            position: relative;
+            z-index: 1;
+            bottom: 150px;
+            left: 31px;
+            width: 330px;
+            //height: 286px;
+            //margin: 0 auto;
+            box-sizing: border-box;
+            padding: 25px 0 0 34px;
+            background: #FFFFFF;
+            box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+
+            .list-title {
+                display: block;
+                margin-bottom: 13px;
+                font-family: "Yeseva One";
+                font-style: normal;
+                font-weight: normal;
+                font-size: 18px;
+                line-height: 25px;
+                color: #363636;
+            }
+
+            .list-points {
+                display: block;                    
+                margin: 0 0 0 15px;               
+                                  
+            }
+
+            .points {                    
+                font-family: "FuturaBookC";
+                font-size: 15px;
+                line-height: 25px;
+                color: #959595;
+            }        
+
+        }
+        .item-price {
+            position: relative;
+            z-index: 2;
+            bottom: -27px;
+            left: -34px;
+            display: block;
+            width: 228px;
+            height: 54px;
+            font-family: "Yeseva One";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 18px;
+            line-height: 54px;
+            text-align: center;
+            background: #E3B873;
+            box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
+            text-transform: uppercase;
+            color: #FFFFFF;
+        }
+
+    }
+}
 .repair {
     height: 2663px;
     position: relative;
@@ -553,77 +622,7 @@
         }
         
     }
-    .repair-examples{
-        display: flex;
-        flex-wrap: wrap; 
-        margin-top: 31px;      
-        
-        .repair-examples__item {
-            position: relative;
-            z-index: 0;
-            margin-right: 30px;
-
-            .item-list {
-                position: relative;
-                z-index: 1;
-                bottom: 150px;
-                left: 31px;
-                width: 330px;
-                height: 286px;
-                //margin: 0 auto;
-                box-sizing: border-box;
-                padding: 25px 0 0 34px;
-                background: #FFFFFF;
-                box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
-
-                .list-title {
-                    display: block;
-                    // margin: 25px 0 0 34px;
-                    font-family: "Yeseva One";
-                    font-style: normal;
-                    font-weight: normal;
-                    font-size: 18px;
-                    line-height: 25px;
-                    color: #363636;
-                }
-
-                .list-points {
-                    display: block; 
-                    margin-left: 15px;
-                   
-                                      
-                }
-
-                .points {                    
-                    font-family: "FuturaBookC";
-                    font-size: 15px;
-                    line-height: 25px;
-                    color: #959595;
-                }        
-
-            }
-            .item-price {
-                position: relative;
-                z-index: 2;
-                bottom: 177px;
-                left: 31px;
-                display: block;
-                width: 228px;
-                height: 54px;
-                font-family: "Yeseva One";
-                font-style: normal;
-                font-weight: normal;
-                font-size: 18px;
-                line-height: 54px;
-                text-align: center;
-                background: #E3B873;
-                box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.3);
-                text-transform: uppercase;
-                color: #FFFFFF;
-            }
-
-        }
-    }
+ 
     .repair__promotion {
         display: flex;
         position: relative;
@@ -903,6 +902,35 @@
         .gallery-img:last-child {
             margin-top: 37px;
         }
+    }
+}
+
+.design-project {
+    position: relative;    
+    z-index: 1;    
+    height: 620px;
+
+    .design-upper{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        z-index: 2;
+        top: 154px;
+    }
+    .design-sign {        
+        @include title-with-icon;
+        background-image: url("assets/img/design-project.png");           
+        color: #181818;         
+    }
+    .design-text{
+        margin: 24px 0 39px 0;
+        max-width: 655px;
+        font-family: "FuturaBookC";
+        font-size: 20px;
+        line-height: 27px;
+        text-align: center;
+        color: #363636;
     }
 }
 
