feat: implement goal section

--- a/style.css
+++ b/style.css
@@ -1108,9 +1108,14 @@
 /* ---SECTION GOAL--- */
 .goal {
   height: 1616px;
+  position: relative;
+  bottom: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding-top: 500px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1125,6 +1130,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-left: 100px;
 }
 
 .goal-info span {
@@ -1231,6 +1237,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-right: 102px;
 }
 
 .goal-steps__grid {
@@ -1244,6 +1251,7 @@
   row-gap: 36px;
   -webkit-column-gap: 200px;
           column-gap: 200px;
+  margin-top: 87px;
 }
 
 .steps__number,
@@ -1261,7 +1269,7 @@
   font-family: "Yeseva One";
 }
 
-.steps__target {
+.steps__number .steps__target {
   font-family: "FuturaBookC";
   line-height: 18px;
 }
