--- a/style.scss
+++ b/style.scss
@@ -1080,6 +1080,118 @@
         line-height: 18px
     }   
 }
-
-
  /* ---SECTION GOAL--- */
+ /* ---SECTION TAEAM-REVIEW--- */
+ .team-review {
+    height: 900px;
+    position: relative;
+ }
+
+
+
+ .team {
+     position: relative;
+     top: -390px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+ }
+ .team-sign {
+    @include title-with-icon;
+    background-image: url("assets/img/our-team.png");           
+    color: #FFFFFF;  
+ }
+ .team-text{
+    display: block;
+    width: 460px;
+    margin: 23px 0 45px 0;
+    font-family: "FuturaBookC";
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;    
+    color: #FFFFFF;
+ }
+ .staff {
+     display: flex;
+     justify-content: center;
+ }
+ .employee {
+     position: relative;
+     width: 272px;
+     height: 358px;
+     margin: 0 53px 0 53px;
+     background-image: url("assets/img/staff_1.png");
+ }
+ .employee__skill {
+     width: 70px;
+     height: 70px;
+     position: absolute;
+     top: -35px;
+     left: -35px;
+     background-image: url("assets/img/staff_1_skill.png");
+ }
+ .employee__card {
+     height: 137px;
+     width: 233px;
+     position: absolute;
+     bottom: -56px;
+     left: 19px;
+     display: flex;
+     flex-direction: column;
+    
+     justify-content: flex-end;
+     background: #FFFFFF;
+     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
+     
+
+     
+ }
+ .employee__exp {
+    height: 44px;
+    width: 100%;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #E3B873;
+    font-family: "Yeseva One";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+ }
+
+ .employee__name {
+    
+    font-family: "Yeseva One";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #181818;
+ }
+
+ .employee__position {
+    margin: 9px 0 24px 0;
+    font-family: "FuturaBookC";
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #959595;
+
+ }
+ .team-desc {
+     max-width: 558px;
+     margin-top: 128px;
+ }
+ .team-desc__text {
+     
+    font-family: "FuturaBookC";
+    font-size: 20px;
+    line-height: 34px;
+    text-align: center;
+    color: #363636;
+ }
