--- a/style.css
+++ b/style.css
@@ -1316,7 +1316,7 @@
 .team-text {
   display: block;
   width: 460px;
-  margin: 23px 0 45px 0;
+  margin: 23px 0 73px 0;
   font-family: "FuturaBookC";
   font-size: 20px;
   line-height: 27px;
@@ -1333,21 +1333,43 @@
           justify-content: center;
 }
 
-.employee {
-  position: relative;
-  width: 272px;
-  height: 358px;
-  margin: 0 53px 0 53px;
-  background-image: url("assets/img/staff_1.png");
-}
-
 .employee__skill {
   width: 70px;
   height: 70px;
   position: absolute;
   top: -35px;
   left: -35px;
+}
+
+.employee {
+  position: relative;
+  width: 272px;
+  height: 358px;
+  margin: 0 53px 0 53px;
+}
+
+.employee:nth-of-type(1) {
+  background-image: url("assets/img/staff_1.png");
+}
+
+.employee:nth-of-type(1) .employee__skill {
   background-image: url("assets/img/staff_1_skill.png");
+}
+
+.employee:nth-of-type(2) {
+  background-image: url("assets/img/staff_2.png");
+}
+
+.employee:nth-of-type(2) .employee__skill {
+  background-image: url("assets/img/staff_2_skill.png");
+}
+
+.employee:nth-of-type(3) {
+  background-image: url("assets/img/staff_3.png");
+}
+
+.employee:nth-of-type(3) .employee__skill {
+  background-image: url("assets/img/staff_3_skill.png");
 }
 
 .employee__card {
