--- a/style.scss
+++ b/style.scss
@@ -1086,9 +1086,6 @@
     height: 900px;
     position: relative;
  }
-
-
-
  .team {
      position: relative;
      top: -390px;
@@ -1101,10 +1098,10 @@
     background-image: url("assets/img/our-team.png");           
     color: #FFFFFF;  
  }
- .team-text{
+ .team-text {
     display: block;
     width: 460px;
-    margin: 23px 0 45px 0;
+    margin: 23px 0 73px 0;
     font-family: "FuturaBookC";
     font-size: 20px;
     line-height: 27px;
@@ -1115,37 +1112,51 @@
      display: flex;
      justify-content: center;
  }
+ .employee__skill {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    top: -35px;
+    left: -35px; 
+}
  .employee {
      position: relative;
      width: 272px;
      height: 358px;
-     margin: 0 53px 0 53px;
-     background-image: url("assets/img/staff_1.png");
+     margin: 0 53px 0 53px;     
+     &:nth-of-type(1){
+        background-image: url("assets/img/staff_1.png");
+        .employee__skill {
+            background-image: url("assets/img/staff_1_skill.png");
+        }
+     }
+     &:nth-of-type(2){
+        background-image: url("assets/img/staff_2.png");
+        .employee__skill {
+            background-image: url("assets/img/staff_2_skill.png");
+        }
+     }
+     &:nth-of-type(3){
+        background-image: url("assets/img/staff_3.png");
+        .employee__skill {
+            background-image: url("assets/img/staff_3_skill.png");
+        }
+     }
  }
- .employee__skill {
-     width: 70px;
-     height: 70px;
-     position: absolute;
-     top: -35px;
-     left: -35px;
-     background-image: url("assets/img/staff_1_skill.png");
- }
- .employee__card {
-     height: 137px;
-     width: 233px;
-     position: absolute;
-     bottom: -56px;
-     left: 19px;
-     display: flex;
-     flex-direction: column;
-    
-     justify-content: flex-end;
-     background: #FFFFFF;
-     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
-     
 
-     
+ .employee__card {
+    height: 137px;
+    width: 233px;
+    position: absolute;
+    bottom: -56px;
+    left: 19px;
+    display: flex;
+    flex-direction: column;    
+    justify-content: flex-end;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);     
  }
+
  .employee__exp {
     height: 44px;
     width: 100%;    
@@ -1163,8 +1174,7 @@
     color: #FFFFFF;
  }
 
- .employee__name {
-    
+ .employee__name {    
     font-family: "Yeseva One";
     font-style: normal;
     font-weight: normal;
@@ -1187,8 +1197,7 @@
      max-width: 558px;
      margin-top: 128px;
  }
- .team-desc__text {
-     
+ .team-desc__text {     
     font-family: "FuturaBookC";
     font-size: 20px;
     line-height: 34px;
