--- a/style.css
+++ b/style.css
@@ -1274,10 +1274,10 @@
   line-height: 18px;
 }
 
-/* ---SECTION GOAL--- */
-/* ---SECTION TAEAM-REVIEW--- */
+/* --- END GOAL--- */
+/* ---SECTION TAEAM--- */
 .team-review {
-  height: 900px;
+  height: 1500px;
   position: relative;
 }
 
@@ -1446,5 +1446,199 @@
   line-height: 34px;
   text-align: center;
   color: #363636;
+}
+
+/* --- END TEAM --- */
+/* --- REVIEW --- */
+.review {
+  margin-top: -300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review-sign {
+  display: block;
+  width: 300px;
+  height: 67px;
+  font-family: "Yeseva One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+  text-transform: uppercase;
+  background-image: url("assets/img/our-clients.png");
+  color: #181818;
+}
+
+.review-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.review-text {
+  display: block;
+  width: 460px;
+  margin: 23px 0 39px 0;
+  font-family: "FuturaBookC";
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  color: #363636;
+}
+
+.review-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  margin: 0 27px;
+  width: 376px;
+  padding: 24px 32px 0 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.04);
+}
+
+.review-block:nth-of-type(1) .review-block__photo {
+  background-image: url("assets/img/review_1_photo.png");
+}
+
+.review-block:nth-of-type(2) .review-block__photo {
+  background-image: url("assets/img/review_2_photo.png");
+}
+
+.review-block:nth-of-type(3) .review-block__photo {
+  background-image: url("assets/img/review_3_photo.png");
+}
+
+.review-block__owner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review-block__photo {
+  height: 76px;
+  width: 76px;
+  margin-right: 23px;
+  border-radius: 50%;
+}
+
+.review-block__name {
+  display: block;
+  max-width: 180px;
+  font-family: "Yeseva One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  word-wrap: wrap;
+  line-height: 23px;
+  color: #181818;
+}
+
+.review-block__text {
+  height: 325px;
+  margin-top: 22px;
+  font-family: "FuturaBookC";
+  font-size: 15px;
+  line-height: 180%;
+  color: #959595;
+  overflow: hidden;
+}
+
+.review-block__result {
+  position: absolute;
+  bottom: -25px;
+  width: 294px;
+  height: 54px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #E3B873;
+  -webkit-box-shadow: 5px 5px 20px rgba(227, 184, 115, 0.5);
+          box-shadow: 5px 5px 20px rgba(227, 184, 115, 0.5);
+}
+
+.repare-result__square {
+  width: 137px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 11px 17px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-image: url("assets/img/result-square.png");
+  background-repeat: no-repeat;
+  background-position: 17px 11px;
+  border-right: 1px solid #FFFFFF;
+  font-family: "Yeseva One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.repare-result__duration {
+  width: 157px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 11px 24px 11px 17px;
+  background-image: url("assets/img/result-time.png");
+  background-repeat: no-repeat;
+  background-position: 17px 11px;
+  font-family: "Yeseva One";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 /*# sourceMappingURL=style.css.map */
